samples/_failures_safe/1761043920_90cd72_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4a8ab174.c: In function ‘main’:
./samples/SAFE/__tmp_4a8ab174.c:206:12: error: missing terminating " character
  206 |     printf("Tokens found: %d\n
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4a8ab174.c:206:5: error: expected expression at end of input
  206 |     printf("Tokens found: %d\n
      |     ^~~~~~
./samples/SAFE/__tmp_4a8ab174.c:206:5: error: expected declaration or statement at end of input
